@@ -1,5 +1,14 @@
 2007-12-12  Andy Wingo  <wingo@pobox.com>
 
+	* gnome/gobject/gobject.c (scm_c_gtype_instance_class_init): Enter
+	guile mode.
+
+	* gnome/gobject/guile-support.h: 
+	* gnome/gobject/guile-support.c (scm_dynwind_guile_v__p_u_c_p)
+	(scm_dynwind_guile_v__p_u_p_p, scm_dynwind_guile_v__p_p): Factor
+	some common scm_with_guile/scm_without_guile code into a separate
+	file. Ick.
+
 	* gnome/gobject/gobject.c (scm_c_gobject_set_property)
 	(scm_c_gobject_get_property): Enter guile mode. Icky icky ick.
 
